k8s/platform/confluent/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: controlcenter
  namespace: confluent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Confluent"
    gethomepage.dev/description: "Kafka Management Console"
    gethomepage.dev/group: "Messaging"
    gethomepage.dev/icon: "confluent.png"
    gethomepage.dev/weight: "5"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - &host kafka-ui.mdeleon.dev
      secretName: kafka-ui-tls-cert
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: controlcenter-bootstrap
                port:
                  number: 9021
